k8s/apps/dev/loading-page/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loading-page
  namespace: loading-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loading-page
  template:
    metadata:
      labels:
        app: loading-page
    spec:
      containers:
        - name: loading-page
          image: edirom/vife-website
          ports:
            - containerPort: 8080
