k8s/apps/dev/loading-page/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loading-page-service
  namespace: loading-page
spec:
  selector:
    app: loading-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
