k8s/apps/dev/loading-page/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loading-page-ingress
  namespace: loading-page
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: bizquery.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loading-page-service
                port:
                  number: 80
